# autoTrade

./: config.yaml  deploy.sh  pyproject.toml  run.py  stock_list.csv
src/: monitor.py  network.py
src/data/: fetcher.py  storage.py
src/engine/: backtest.py  metrics.py
src/signal/: generator.py  notifier.py
src/strategies/: __init__.py  base.py
src/strategies/examples/: ma_cross.py  macd_rsi.py
strategies/: my_strategy.py
